# text2epub

./: .ruff.toml  CHANGELOG.md  README.md  pyproject.toml  setup.py
.releaseledger/ledgers/main/events/: events.jsonl
.releaseledger/ledgers/main/indexes/: entries.json  releases.json
.releaseledger/ledgers/main/releases/v0.1.2/: release.md
.releaseledger/ledgers/main/releases/v0.1.2/entries/: entry-0001.md  entry-0002.md
.releaseledger/ledgers/main/releases/v0.1.3/entries/: entry-0001.md  entry-0002.md  entry-0003.md
docs/: api.md  cli.md  conf.py  getting-started.md  index.md  markdown.md  rebuild.md  release-checklist.md
examples/markdown-essays/: README.md  build.py  style.css
examples/markdown-essays/chapters/: 01-introduction.md  02-on-markdown.md  03-on-epub.md
examples/rebuild-translation/: README.md  build.py  replacements.json
examples/rebuild-translation/source/: chapter-01.md
examples/xhtml-assembly/: README.md  build.py
tests/: helpers.py  test_cli.py  test_markdown.py  test_replacement.py
text2epub/: builder.py  cli.py  markdown.py  nav.py  opf.py  package.py  replacement.py  validation.py
